...
                  avatar: const Icon(Icons.person_add),
                  label: const Text('Добавить пациента'),
                  onPressed: () => context.go('/patients/add'),
                ),
                ActionChip(
                  avatar: const Icon(Icons.library_music),
                  label: const Text('Библиотека звуков'),
                  onPressed: () => context.go('/audio-library'),
                ),
                ActionChip(
                  avatar: const Icon(Icons.quiz),
                  label: const Text('Список тестов'),
                  onPressed: () => context.go('/quizzes'),
...
